--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,15 +20,15 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Settings</a></li>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Help</a></li>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Acerca de</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="#">Ayuda</a></li>
           <li><%= link_to current_user.email %></li>
           <li><%= link_to "Salir", destroy_user_session_path, method: :delete %></li>
         </ul>
         <form class="navbar-form navbar-right">
-          <input type="text" class="form-control" placeholder="Search...">
+          <input type="text" class="form-control" placeholder="Buscar...">
         </form>
       </div>
     </div>
@@ -39,29 +39,35 @@
       <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar">
           <li class="active"><%= link_to "Administrador", root_path %></li>
-          <li><a href="#">Reports</a></li>
-          <li><a href="#">Analytics</a></li>
-          <li><a href="#">Export</a></li>
+          <li><a href="#">Clientes</a></li>
+          <li><a href="#">Períodos</a></li>
+          <li><a href="#">Lecturas</a></li>
         </ul>
         <ul class="nav nav-sidebar">
-          <li><a href="">Nav item</a></li>
+          <li><a href="">Servicios</a></li>
+          <li><a href="">Facturación</a></li>
+          <li><a href="">Pagos</a></li>
+          <li><a href="">Cuenta corriente cliente</a></li>
+          <li><a href="">Reportes</a></li>
+        </ul>
+        <!--<ul class="nav nav-sidebar">
           <li><a href="">Nav item again</a></li>
           <li><a href="">One more nav</a></li>
           <li><a href="">Another nav item</a></li>
-          <li><a href="">More navigation</a></li>
-        </ul>
-        <ul class="nav nav-sidebar">
-          <li><a href="">Nav item again</a></li>
-          <li><a href="">One more nav</a></li>
-          <li><a href="">Another nav item</a></li>
-        </ul>
+        </ul>-->
       </div>
       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <% flash.each do |name, msg| %>
-        <%= content_tag :div, class: "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable", role: "alert" do %>
-        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <%= msg %>
+        <% if notice %>
+          <div class="alert alert-success">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <%= notice %>
+          </div>  
         <% end %>
+        <% if alert %>
+          <div class="alert alert-danger">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <%= alert %>
+          </div>
         <% end %>
         <%= yield %>
       </div>
