--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -6,8 +6,8 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-  <div class="container col-md-3 col-md-offset-4">
+<body class="login-img-body">
+  <div class="container col-md-3 col-md-offset-4 col-sm-3 col-sm-offset-4">
     <div>
       <center>
         <%=image_tag("access.png", :size => "100x100")%>
