--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,7 @@
  * It is generally better to create a new file per style scope.
  *= require devise_bootstrap_views
  *= require_tree .
+ *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
+ *= require dataTables/jquery.dataTables
  *= require_self
  */
