--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "GOTAPP", "#", class: "navbar-brand" %>
+        <%= link_to "GOTAPP", root_path, class: "navbar-brand" %>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -39,7 +39,7 @@
       <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar">
           <li class="active"><%= link_to "Administrador", root_path %></li>
-          <li><a href="#">Clientes</a></li>
+          <li><%= link_to "Clientes", clientes_path %></li>
           <li><a href="#">Períodos</a></li>
           <li><a href="#">Lecturas</a></li>
         </ul>
