--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -16,7 +16,7 @@
     
       <%= f.label :cod, class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
-        <%= f.text_field :cod, class: "form-control" %>
+        <%= f.number_field :cod, class: "form-control" %>
       </div>
     
   </div>
