--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
         <ul class="nav nav-sidebar">
           <li class="active"><%= link_to "Administrador", root_path %></li>
           <li><%= link_to "Clientes", clientes_path %></li>
-          <li><a href="#">Períodos</a></li>
+          <li><%= link_to "Períodos", periodos_path %></li>
           <li><a href="#">Lecturas</a></li>
         </ul>
         <ul class="nav nav-sidebar">
