Módulo servicio y lectura.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,10 +41,10 @@
           <li class="active"><%= link_to "Administrador", root_path %></li>
           <li><%= link_to "Clientes", clientes_path %></li>
           <li><%= link_to "Períodos", periodos_path %></li>
-          <li><a href="#">Lecturas</a></li>
+          <li><%= link_to "Lecturas", lecturas_path %></li>
         </ul>
         <ul class="nav nav-sidebar">
-          <li><a href="">Servicios</a></li>
+          <li><%= link_to "Servicios", servicios_path %></li>
           <li><a href="">Facturación</a></li>
           <li><a href="">Pagos</a></li>
           <li><a href="">Cuenta corriente cliente</a></li>
