--- a/app/views/lecturas/show.html.erb
+++ b/app/views/lecturas/show.html.erb
@@ -11,11 +11,11 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt>Estado medidor:</dt>
-  <dd><%= @lectura.estado_medidor %></dd>
+  <dt>Cliente:</dt>
+  <dd><%= @lectura.cliente_id %></dd>
 
-  <dt>Numero medidor:</dt>
-  <dd><%= @lectura.numero_medidor %></dd>
+  <dt>Periodo:</dt>
+  <dd><%= @lectura.periodo_id %></dd>
 
   <dt>Fecha:</dt>
   <dd><%= @lectura.fecha %></dd>
