--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -2,7 +2,7 @@
   <% if @cliente.errors.any? %>
     <div class="alert alert-danger alert-dismissable" role="alert">
       <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-      <h4><%= pluralize(@cliente.errors.count, "error") %> prohibited this cliente from being saved:</h4>
+      <h4><%= pluralize(@cliente.errors.count, "error") %> no permiten guardar este cliente:</h4>
 
       <ul>
       <% @cliente.errors.full_messages.each do |msg| %>
@@ -14,23 +14,21 @@
 
   <div class="form-group">
     
-      <%= f.label :cod, class: "col-sm-2 control-label" %>
+      <%= f.label :ci, class: "col-sm-2 control-label" do %>
+        C. I. Nº
+        <span class="required">*</span>
+      <% end %>
       <div class="col-sm-10">
-        <%= f.number_field :cod, class: "form-control" %>
+        <%= f.number_field :ci, class: "form-control" %>
       </div>
     
   </div>
   <div class="form-group">
     
-      <%= f.label :ci, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.text_field :ci, class: "form-control" %>
-      </div>
-    
-  </div>
-  <div class="form-group">
-    
-      <%= f.label :nombre, class: "col-sm-2 control-label" %>
+      <%= f.label :nombre, class: "col-sm-2 control-label" do %>
+        Nombre
+        <span class="required">*</span>
+      <% end %>
       <div class="col-sm-10">
         <%= f.text_field :nombre, class: "form-control" %>
       </div>
@@ -38,7 +36,10 @@
   </div>
   <div class="form-group">
     
-      <%= f.label :direccion, class: "col-sm-2 control-label" %>
+      <%= f.label :direccion, class: "col-sm-2 control-label" do %>
+        Dirección
+        <span class="required">*</span>
+      <% end %>
       <div class="col-sm-10">
         <%= f.text_field :direccion, class: "form-control" %>
       </div>
@@ -46,7 +47,7 @@
   </div>
   <div class="form-group">
     
-      <%= f.label :telefono, class: "col-sm-2 control-label" %>
+      <%= f.label :telefono, "Teléfono", class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%= f.text_field :telefono, class: "form-control" %>
       </div>
@@ -54,7 +55,7 @@
   </div>
   <div class="form-group">
     
-      <%= f.label :fecha_contrato, class: "col-sm-2 control-label" %>
+      <%= f.label :fecha_contrato, "Fecha de contrato", class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%= f.date_select :fecha_contrato, class: "form-control" %>
       </div>
@@ -62,7 +63,7 @@
   </div>
   <div class="form-group">
     
-      <%= f.label :fecha_conexion, class: "col-sm-2 control-label" %>
+      <%= f.label :fecha_conexion, "Fecha de conexión", class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%= f.date_select :fecha_conexion, class: "form-control" %>
       </div>
@@ -70,23 +71,48 @@
   </div>
   <div class="form-group">
     
-      <%= f.label :estado_cuenta, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.text_field :estado_cuenta, class: "form-control" %>
-      </div>
-    
-  </div>
-  <div class="form-group">
-    
-      <%= f.label :observacion, class: "col-sm-2 control-label" %>
+      <%= f.label :observacion, "Observación", class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
         <%= f.text_field :observacion, class: "form-control" %>
       </div>
     
   </div>
   <div class="form-group">
+    
+      <div class="col-sm-offset-2 col-sm-10"> 
+        <div class="checkbox">
+          <label>
+            <%= f.check_box :estado_cuenta %>
+            Estado de cuenta      
+          </label>
+        </div>
+      </div>
+    
+  </div>
+  <div class="form-group">
+    
+      <div class="col-sm-offset-2 col-sm-10"> 
+        <div class="checkbox">
+          <label>
+            <%= f.check_box :estado_medidor %>
+            Estado de medidor      
+          </label>
+        </div>
+      </div>
+    
+  </div>
+  <div class="form-group">
+    
+      <%= f.label :numero_medidor, "Nº de medidor", class: "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.text_field :numero_medidor, class: "form-control" %>
+      </div>
+    
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit class: "btn btn-primary" %>
+      <%= f.submit "Guardar", class: "btn btn-primary" %>
+      <%= link_to "Cancelar", clientes_path, class: "btn btn-default" %>
     </div>
   </div>
 <% end %>
