--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="page-header">
   <%= link_to clientes_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    Atrás
   <% end %>
   <%= link_to @cliente, class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-info-sign"></span>
-    Show
+    Ver
   <% end %>
-  <h1>Editing cliente</h1>
+  <h1>Editar cliente</h1>
 </div>
 
 <%= render 'form' %>
