--- a/app/views/lecturas/_form.html.erb
+++ b/app/views/lecturas/_form.html.erb
@@ -14,17 +14,17 @@
 
   <div class="form-group">
     
-      <%= f.label :estado_medidor, class: "col-sm-2 control-label" %>
+      <%= f.label :cliente_id, class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
-        <%= f.text_field :estado_medidor, class: "form-control" %>
+        <%= f.number_field :cliente_id, class: "form-control" %>
       </div>
     
   </div>
   <div class="form-group">
     
-      <%= f.label :numero_medidor, class: "col-sm-2 control-label" %>
+      <%= f.label :periodo_id, class: "col-sm-2 control-label" %>
       <div class="col-sm-10">
-        <%= f.text_field :numero_medidor, class: "form-control" %>
+        <%= f.number_field :periodo_id, class: "form-control" %>
       </div>
     
   </div>
