--- a/app/views/periodos/index.html.erb
+++ b/app/views/periodos/index.html.erb
@@ -1,22 +1,18 @@
 <div class="page-header">
   <%= link_to new_periodo_path, class: 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-plus"></span>
-    New Periodo
+  <span class="glyphicon glyphicon-plus"></span>
+  Nuevo Período
   <% end %>
-  <h1>Listing periodos</h1>
+  <h1>Lista de períodos</h1>
 </div>
 
 <div class="table-responsive">
   <table id="tablaperiodo" class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-        <th>Cod</th>
-        <th>Mes ano</th>
-        <th>Fecha vencimiento</th>
-        <th>Estado periodo</th>
-        <th>Fecha inicio</th>
-        <th>Fecha fin</th>
-        <th>Cantidad dias</th>
+        <th>Período</th>
+        <th>Fecha de vencimiento</th>
+        <th>Estado de período</th>
         <th></th>
         <th></th>
         <th></th>
@@ -25,22 +21,46 @@
 
     <tbody>
       <%= content_tag_for(:tr, @periodos) do |periodo| %>
-            <td><%= periodo.cod %></td>
-            <td><%= periodo.mes_ano %></td>
-            <td><%= periodo.fecha_vencimiento %></td>
-            <td><%= periodo.estado_periodo %></td>
-            <td><%= periodo.fecha_inicio %></td>
-            <td><%= periodo.fecha_fin %></td>
-            <td><%= periodo.cantidad_dias %></td>
-            <td><%= link_to 'Show', periodo %></td>
-        <td><%= link_to 'Edit', edit_periodo_path(periodo) %></td>
-        <td><%= link_to 'Destroy', periodo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= periodo.periodo %></td>
+      <td><%= periodo.fecha_vencimiento %></td>
+      <% if periodo.estado_periodo == true %>
+        <td>ACTIVO</td>
+      <% else %>
+        <td>INACTIVO</td>
+      <% end %>
+      <td><%= link_to 'Ver', periodo, class: "btn btn-default" %></td>
+      <td><%= link_to 'Editar', edit_periodo_path(periodo), class: "btn btn-primary" %></td>
+      <td><%= link_to 'Eliminar', periodo, method: :delete, data: { confirm: 'Estás seguro?' }, class: "btn btn-danger" %></td>
       <% end %>
     </tbody>
   </table>
 </div>
 
 <script>
-  $('#tablaperiodo').DataTable({
-  });
+$('#tablaperiodo').DataTable({
+  "language": {
+    "sProcessing":     "Procesando...",
+    "sLengthMenu":     "Mostrar _MENU_ registros",
+    "sZeroRecords":    "No se encontraron resultados",
+    "sEmptyTable":     "Ningún dato disponible en esta tabla",
+    "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+    "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+    "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+    "sInfoPostFix":    "",
+    "sSearch":         "Buscar:",
+    "sUrl":            "",
+    "sInfoThousands":  ",",
+    "sLoadingRecords": "Cargando...",
+    "oPaginate": {
+      "sFirst":    "Primero",
+      "sLast":     "Último",
+      "sNext":     "Siguiente",
+      "sPrevious": "Anterior"
+    },
+    "oAria": {
+      "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+      "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+    }
+  }
+});
 </script>
