--- a/app/views/periodos/show.html.erb
+++ b/app/views/periodos/show.html.erb
@@ -1,35 +1,23 @@
 <div class="page-header">
   <%= link_to periodos_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    Atrás
   <% end %>
   <%= link_to edit_periodo_path(@periodo), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-pencil"></span>
-    Edit
+    Editar
   <% end %>
-  <h1>Show periodo</h1>
+  <h1>Período</h1>
 </div>
 
 <dl class="dl-horizontal">
-  <dt>Cod:</dt>
-  <dd><%= @periodo.cod %></dd>
+  <dt>Período:</dt>
+  <dd><%= @periodo.periodo %></dd>
 
-  <dt>Mes ano:</dt>
-  <dd><%= @periodo.mes_ano %></dd>
-
-  <dt>Fecha vencimiento:</dt>
+  <dt>Fecha de vencimiento:</dt>
   <dd><%= @periodo.fecha_vencimiento %></dd>
 
-  <dt>Estado periodo:</dt>
+  <dt>Estado de período:</dt>
   <dd><%= @periodo.estado_periodo %></dd>
-
-  <dt>Fecha inicio:</dt>
-  <dd><%= @periodo.fecha_inicio %></dd>
-
-  <dt>Fecha fin:</dt>
-  <dd><%= @periodo.fecha_fin %></dd>
-
-  <dt>Cantidad dias:</dt>
-  <dd><%= @periodo.cantidad_dias %></dd>
 
 </dl>
