--- a/app/views/servicios/_form.html.erb
+++ b/app/views/servicios/_form.html.erb
@@ -14,15 +14,10 @@
 
   <div class="form-group">
     
-      <%= f.label :cod, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.number_field :cod, class: "form-control" %>
-      </div>
-    
-  </div>
-  <div class="form-group">
-    
-      <%= f.label :concepto, class: "col-sm-2 control-label" %>
+      <%= f.label :concepto, class: "col-sm-2 control-label" do %>
+        Concepto
+        <span class="required">*</span>
+      <% end %>
       <div class="col-sm-10">
         <%= f.text_field :concepto, class: "form-control" %>
       </div>
@@ -30,7 +25,10 @@
   </div>
   <div class="form-group">
     
-      <%= f.label :tarifa, class: "col-sm-2 control-label" %>
+      <%= f.label :tarifa, class: "col-sm-2 control-label" do %>
+        Tarifa
+        <span class="required">*</span>
+      <% end %>
       <div class="col-sm-10">
         <%= f.number_field :tarifa, class: "form-control" %>
       </div>
@@ -38,7 +36,8 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit class: "btn btn-primary" %>
+      <%= f.submit "Guardar", class: "btn btn-primary" %>
+      <%= link_to "Cancelar", servicios_path, class: "btn btn-default" %>
     </div>
   </div>
 <% end %>
