Procedimientos almacenados para lecturas y facturas.

--- a/app/views/facturas/edit.html.erb
+++ b/app/views/facturas/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="page-header">
   <%= link_to facturas_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    Atrás
   <% end %>
   <%= link_to @factura, class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-info-sign"></span>
-    Show
+    Ver
   <% end %>
-  <h1>Editing factura</h1>
+  <h1>Editar factura</h1>
 </div>
 
 <%= render 'form' %>
