--- a/app/views/facturas/_form.html.erb
+++ b/app/views/facturas/_form.html.erb
@@ -1,76 +1,199 @@
 <%= form_for(@factura, html: { class: "form-horizontal", role: "form" }) do |f| %>
-  <% if @factura.errors.any? %>
-    <div class="alert alert-danger alert-dismissable" role="alert">
-      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-      <h4><%= pluralize(@factura.errors.count, "error") %> prohibited this factura from being saved:</h4>
+<% if @factura.errors.any? %>
+<div class="alert alert-danger alert-dismissable" role="alert">
+  <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+  <h4><%= pluralize(@factura.errors.count, "error") %> prohibited this factura from being saved:</h4>
 
-      <ul>
-      <% @factura.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <ul>
+    <% @factura.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 
-  <div class="form-group">
-    
-      <%= f.label :nrofact, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
+<div class="row">
+
+  <div class="col-md-6">
+    <div class="form-group">
+
+      <%= f.label :nrofact, class: "col-sm-3 control-label" do %>
+      Nº de factura
+      <span class="required">*</span>
+      <% end %>    
+      <div class="col-sm-9">
         <%= f.text_field :nrofact, class: "form-control" %>
       </div>
-    
-  </div>
-  <div class="form-group">
-    
-      <%= f.label :cliente_id, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.number_field :cliente_id, class: "form-control" %>
-      </div>
-    
-  </div>
-  <div class="form-group">
-    
-      <%= f.label :condicion, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.text_field :condicion, class: "form-control" %>
-      </div>
-    
-  </div>
-  <div class="form-group">
-    
-      <%= f.label :fecha, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.date_select :fecha, class: "form-control" %>
-      </div>
-    
-  </div>
-  <div class="form-group">
-    
-      <%= f.label :iva, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.number_field :iva, class: "form-control" %>
-      </div>
-    
-  </div>
-  <div class="form-group">
-    
-      <%= f.label :erssan, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.number_field :erssan, class: "form-control" %>
-      </div>
-    
-  </div>
-  <div class="form-group">
-    
-      <%= f.label :total, class: "col-sm-2 control-label" %>
-      <div class="col-sm-10">
-        <%= f.number_field :total, class: "form-control" %>
-      </div>
-    
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit class: "btn btn-primary" %>
+
     </div>
   </div>
-<% end %>
+  
+  <div class="col-md-6">
+    <div class="form-group">
+
+      <%= f.label :cliente_id, class: "col-sm-3 control-label" do %>
+      Cliente
+      <span class="required">*</span>
+      <% end %>
+      <div class="col-sm-9">
+        <div class="input-group">
+          <%= f.number_field :cliente_id, class: "form-control" %>
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-success btn-md" data-toggle="modal" data-target="#clienteModal">
+              Buscar
+            </button>
+          </span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-6">
+      <div class="form-group">
+
+        <%= f.label :condicion, class: "col-sm-3 control-label" do %>
+        Condición
+        <span class="required">*</span>
+        <% end %>
+        <div class="col-sm-9">
+          <%= f.radio_button :condicion, 'CRÉDITO', :checked => true %> Crédito &nbsp;&nbsp;
+          <%= f.radio_button :condicion, 'CONTADO' %> Contado
+        </div>
+
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="form-group">
+
+        <%= f.label :fecha, class: "col-sm-3 control-label" do %>
+        Fecha
+        <span class="required">*</span>
+        <% end %>
+        <div class="col-sm-9">
+          <%= f.date_select :fecha, class: "form-control" %>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+  <div class="page-header">
+    <h2>Detalle factura</h2>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12 table-responsive">
+      <table id="tabladetalle" class="table table-striped table-bordered table-hover">
+        <thead>
+          <tr>
+            <th>Concepto</th>
+            <th>Tarifa</th>
+            <th>Subtotal</th>
+          </tr>
+        </thead>
+
+        <tbody>
+
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-4 col-md-offset-8">
+      <div class="form-group">
+
+        <%= f.label :iva, class: "col-sm-3 control-label" do %>
+        Iva
+        <span class="required">*</span>
+        <% end %>
+        <div class="col-sm-9">
+          <%= f.number_field :iva, class: "form-control", disabled: true %>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-4 col-md-offset-8">
+      <div class="form-group">
+
+        <%= f.label :erssan, class: "col-sm-3 control-label" do %>
+        Erssan
+        <span class="required">*</span>
+        <% end %>
+        <div class="col-sm-9">
+          <%= f.number_field :erssan, class: "form-control", disabled: true %>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-4 col-md-offset-8 ">
+      <div class="form-group">
+
+        <%= f.label :total, class: "col-sm-3 control-label" do %>
+        Total
+        <span class="required">*</span>
+        <% end %>
+        <div class="col-sm-9">
+          <%= f.number_field :total, class: "form-control", disabled: true %>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-4 col-md-offset-8 ">
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9">
+          <%= f.submit "Guardar", class: "btn btn-primary" %>
+          <%= link_to "Cancelar", facturas_path, class: "btn btn-default" %>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <% end %>
+
+  <!-- Modal -->
+  <div class="modal fade" id="clienteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+  $('#clienteModal').on('shown.bs.modal', function () {
+    $('#factura_nrofact').focus()
+  })
+</script>
