--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
         </ul>
         <ul class="nav nav-sidebar">
           <li class="<%= 'active' if current_page?(servicios_path) %>"><%= link_to "Servicios", servicios_path %></li>
-          <li><a href="">Facturas</a></li>
+          <li class="<%= 'active' if current_page?(facturas_path) %>"><%= link_to "Facturas", facturas_path %></li>
           <li><a href="">Pagos</a></li>
           <li><a href="">Cuenta corriente cliente</a></li>
           <li><a href="">Reportes</a></li>
