--- a/app/views/lecturas/index.html.erb
+++ b/app/views/lecturas/index.html.erb
@@ -1,24 +1,24 @@
 <div class="page-header">
   <%= link_to new_lectura_path, class: 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-plus"></span>
-    New Lectura
+  <span class="glyphicon glyphicon-plus"></span>
+  Nueva lectura
   <% end %>
-  <h1>Listing lecturas</h1>
+  <h1>Lista de lecturas</h1>
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table id="tablalectura" class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-            <th>Cliente</th>
-            <th>Periodo</th>
-            <th>Fecha</th>
-            <th>Lector</th>
-            <th>Anterior</th>
-            <th>Actual</th>
-            <th>Consumo</th>
-            <th>Exceso</th>
-            <th></th>
+        <th>Cliente</th>
+        <th>Periodo</th>
+        <th>Fecha</th>
+        <th>Lector</th>
+        <th>Anterior</th>
+        <th>Actual</th>
+        <th>Consumo</th>
+        <th>Exceso</th>
+        <th></th>
         <th></th>
         <th></th>
       </tr>
@@ -26,18 +26,49 @@
 
     <tbody>
       <%= content_tag_for(:tr, @lecturas) do |lectura| %>
-            <td><%= lectura.cliente_id %></td>
-            <td><%= lectura.periodo_id %></td>
-            <td><%= lectura.fecha %></td>
-            <td><%= lectura.lector %></td>
-            <td><%= lectura.anterior %></td>
-            <td><%= lectura.actual %></td>
-            <td><%= lectura.consumo %></td>
-            <td><%= lectura.exceso %></td>
-            <td><%= link_to 'Show', lectura %></td>
-        <td><%= link_to 'Edit', edit_lectura_path(lectura) %></td>
-        <td><%= link_to 'Destroy', lectura, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= lectura.cliente_id %></td>
+      <td><%= lectura.periodo_id %></td>
+      <td><%= lectura.fecha %></td>
+      <td><%= lectura.lector %></td>
+      <td><%= lectura.anterior %></td>
+      <td><%= lectura.actual %></td>
+      <td><%= lectura.consumo %></td>
+      <td><%= lectura.exceso %></td>
+      <td><%= link_to 'Ver', lectura, class: "btn btn-default" %></td>
+      <td><%= link_to 'Editar', edit_lectura_path(lectura), class: "btn btn-primary" %></td>
+      <td><%= link_to 'Eliminar', lectura, method: :delete, data: { confirm: 'Estas seguro?' }, class: "btn btn-danger" %></td>
       <% end %>
     </tbody>
   </table>
 </div>
+
+<script>
+$(document).ready(function() {
+  $('#tablalectura').DataTable({
+    "language": {
+      "sProcessing":     "Procesando...",
+      "sLengthMenu":     "Mostrar _MENU_ registros",
+      "sZeroRecords":    "No se encontraron resultados",
+      "sEmptyTable":     "Ningún dato disponible en esta tabla",
+      "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+      "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+      "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+      "sInfoPostFix":    "",
+      "sSearch":         "Buscar:",
+      "sUrl":            "",
+      "sInfoThousands":  ",",
+      "sLoadingRecords": "Cargando...",
+      "oPaginate": {
+        "sFirst":    "Primero",
+        "sLast":     "Último",
+        "sNext":     "Siguiente",
+        "sPrevious": "Anterior"
+      },
+      "oAria": {
+        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+      }
+    }
+  });
+});
+</script>
