--- a/app/views/lecturas/new.html.erb
+++ b/app/views/lecturas/new.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <%= link_to lecturas_path, class: 'btn btn-default' do %>
-    <span class="glyphicon glyphicon-list-alt"></span>
-    Back
-  <% end %>
-  <h1>New lectura</h1>
+	<%= link_to lecturas_path, class: 'btn btn-default' do %>
+	<span class="glyphicon glyphicon-list-alt"></span>
+	Atrás
+	<% end %>
+	<h1>Nueva lectura</h1>
 </div>
 
 <%= render 'form' %>
