Enlace entre la interfaz de facturación y su procedimiento almacenado.

--- a/app/views/facturas/index.html.erb
+++ b/app/views/facturas/index.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
-  <%= link_to new_factura_path, class: 'btn btn-primary' do %>
-  <span class="glyphicon glyphicon-plus"></span>
-  Nueva factura
+  <%= link_to facturas_facturar_path, method: :post, class: 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-plus"></span>
+    Crear facturas
   <% end %>
   <h1>Lista de facturas</h1>
 </div>
