--- a/app/views/facturas/show.html.erb
+++ b/app/views/facturas/show.html.erb
@@ -10,6 +10,8 @@
   <h1>Factura</h1>
 </div>
 
+<%= render 'form' %>
+<!--
 <dl class="dl-horizontal">
   <dt>Nº de factura:</dt>
   <dd><%= @factura.nrofact %></dd>
@@ -33,3 +35,4 @@
   <dd><%= @factura.total %></dd>
 
 </dl>
+-->
