--- a/app/views/facturas/_form.html.erb
+++ b/app/views/facturas/_form.html.erb
@@ -1,52 +1,53 @@
 <%= form_for(@factura, html: { class: "form-horizontal", role: "form" }) do |f| %>
-<% if @factura.errors.any? %>
-<div class="alert alert-danger alert-dismissable" role="alert">
-  <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-  <h4><%= pluralize(@factura.errors.count, "error") %> prohibited this factura from being saved:</h4>
+  <% if @factura.errors.any? %>
+    <div class="alert alert-danger alert-dismissable" role="alert">
+      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+      <h4><%= pluralize(@factura.errors.count, "error") %> prohibited this factura from being saved:</h4>
 
-  <ul>
-    <% @factura.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
-
-<div class="row">
-
-  <div class="col-md-6">
-    <div class="form-group">
-
-      <%= f.label :nrofact, class: "col-sm-3 control-label" do %>
-      Nº de factura
-      <span class="required">*</span>
-      <% end %>    
-      <div class="col-sm-9">
-        <%= f.text_field :nrofact, class: "form-control" %>
-      </div>
-
+      <ul>
+        <% @factura.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
     </div>
-  </div>
-  
-  <div class="col-md-6">
-    <div class="form-group">
+  <% end %>
 
-      <%= f.label :cliente_id, class: "col-sm-3 control-label" do %>
-      Cliente
-      <span class="required">*</span>
-      <% end %>
-      <div class="col-sm-9">
-        <div class="input-group">
-          <%= f.number_field :cliente_id, class: "form-control" %>
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-success btn-md" data-toggle="modal" data-target="#clienteModal">
-              Buscar
-            </button>
-          </span>
+  <div class="row">
+
+    <div class="col-md-6">
+      <div class="form-group">
+
+        <%= f.label :nrofact, class: "col-sm-3 control-label" do %>
+          Nº de factura
+          <span class="required">*</span>
+        <% end %>    
+        <div class="col-sm-9">
+          <%= f.text_field :nrofact, class: "form-control" %>
+        </div>
+
+      </div>
+    </div>
+  
+    <div class="col-md-6">
+      <div class="form-group">
+
+        <%= f.label :cliente_id, class: "col-sm-3 control-label" do %>
+          Cliente
+          <span class="required">*</span>
+        <% end %>
+        <div class="col-sm-9">
+          <div class="input-group">
+            <%= f.number_field :cliente_id, class: "form-control" %>
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-success btn-md" data-toggle="modal" data-target="#clienteModal">
+                Buscar
+              </button>
+            </span>
+          </div>
         </div>
       </div>
-    </div>
 
+    </div>
   </div>
 
   <div class="row">
@@ -98,7 +99,13 @@
         </thead>
 
         <tbody>
-
+          <% @detalles.each do |detalle| -%>
+          <tr>  
+            <td><%= detalle.servicio.concepto %></td>
+            <td><%= detalle.servicio.tarifa %></td>
+            <td><%= detalle.subtotal %></td>
+          </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
@@ -171,29 +178,56 @@
 
   </div>
 
-  <% end %>
+<% end %>
 
-  <!-- Modal -->
-  <div class="modal fade" id="clienteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+<!-- Modal -->
+<div class="modal fade" id="clienteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
+</div>
 
-  <script>
+<script>
   $('#clienteModal').on('shown.bs.modal', function () {
     $('#factura_nrofact').focus()
-  })
+  });
+
+  $('#tabladetalle').DataTable({
+    "language": {
+      "sProcessing":     "Procesando...",
+      "sLengthMenu":     "Mostrar _MENU_ registros",
+      "sZeroRecords":    "No se encontraron resultados",
+      "sEmptyTable":     "Ningún dato disponible en esta tabla",
+      "sInfo":           "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+      "sInfoEmpty":      "Mostrando registros del 0 al 0 de un total de 0 registros",
+      "sInfoFiltered":   "(filtrado de un total de _MAX_ registros)",
+      "sInfoPostFix":    "",
+      "sSearch":         "Buscar:",
+      "sUrl":            "",
+      "sInfoThousands":  ",",
+      "sLoadingRecords": "Cargando...",
+      "oPaginate": {
+        "sFirst":    "Primero",
+        "sLast":     "Último",
+        "sNext":     "Siguiente",
+        "sPrevious": "Anterior"
+      },
+      "oAria": {
+        "sSortAscending":  ": Activar para ordenar la columna de manera ascendente",
+        "sSortDescending": ": Activar para ordenar la columna de manera descendente"
+      }
+    }
+  });
 </script>
