--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+  <% unless flash.empty? %>
+    <script type="text/javascript">
+      <% flash.each do |f| %>
+        <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
+        toastr['<%= type %>']('<%= f[1] %>');
+      <% end %>
+    </script>
+  <% end %>
+
+  <% if not current_user.nil? and user_signed_in? %>
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -20,11 +31,12 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Inicio</a></li>
+          <li><%= link_to dashboard_index_path, class: 'login-button' do %>Inicio<% end %></li>
           <li><a href="#">Acerca de</a></li>
           <li><a href="#">Contacto</a></li>
           <li><a href="#">Ayuda</a></li>
           <li><%= link_to current_user.email %></li>
+          <li><%= link_to('Editar cuenta', edit_user_registration_path) %></li>
           <li><%= link_to "Salir", destroy_user_session_path, method: :delete %></li>
         </ul>
         <form class="navbar-form navbar-right">
@@ -33,12 +45,14 @@
       </div>
     </div>
   </nav>
+  <!--<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <%= yield %>
+  </div>-->
 
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar">
-          <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Administrador", root_path %></li>
           <li class="<%= 'active' if current_page?(clientes_path) %>"><%= link_to "Clientes", clientes_path %></li>
           <li class="<%= 'active' if current_page?(periodos_path) %>"><%= link_to "Períodos", periodos_path %></li>
           <li class="<%= 'active' if current_page?(lecturas_path) %>"><%= link_to "Lecturas", lecturas_path %></li>
@@ -50,28 +64,35 @@
           <li><a href="">Pagos</a></li>
           <li><a href="">Reportes</a></li>
         </ul>
-        <!--<ul class="nav nav-sidebar">
-          <li><a href="">Nav item again</a></li>
-          <li><a href="">One more nav</a></li>
-          <li><a href="">Another nav item</a></li>
-        </ul>-->
       </div>
       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <% if notice %>
-          <div class="alert alert-success">
-            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <%= notice %>
-          </div>  
-        <% end %>
-        <% if alert %>
-          <div class="alert alert-danger">
-            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <%= alert %>
-          </div>
-        <% end %>
         <%= yield %>
       </div>
     </div>
   </div>
+  <% else %>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to "GOTAPP", root_path, class: "navbar-brand" %>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to new_user_registration_path, class: 'login-button' do %>Registrarse<% end %></li>
+          <li><%= link_to('Iniciar sesión', new_user_session_path)  %></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+    <%= yield %>
+  </div>
+  <% end %>
 </body>
 </html>
