--- a/app/views/medidors/index.html.erb
+++ b/app/views/medidors/index.html.erb
@@ -1,36 +1,36 @@
 <div class="page-header">
-  <%= link_to new_lectura_path, class: 'btn btn-primary' do %>
-  <span class="glyphicon glyphicon-plus"></span>
-  Nueva lectura
+  <%= link_to new_medidor_path, class: 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-plus"></span>
+    Nuevo Medidor
   <% end %>
-  <h1>Lista de lecturas</h1>
+  <h1>Lista de medidores</h1>
 </div>
 
 <div class="table-responsive">
-  <table id="tablalectura" class="table table-striped table-bordered table-hover">
+  <table id="tablamedidor" class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-        <th>Periodo</th>
-        <th>Cliente</th>
-        <th>Actual</th>
-        <th>Consumo</th>
-        <th>Exceso</th>
-        <th></th>
+            <th>Numero</th>
+            <th>Medicion</th>
+            <th>Estado medidor</th>
+            <th></th>
         <th></th>
         <th></th>
       </tr>
     </thead>
 
     <tbody>
-      <%= content_tag_for(:tr, @lecturas) do |lectura| %>
-      <td><%= lectura.periodo.periodo.strftime("%m-%Y") %></td>
-      <td><%= lectura.cliente.nombre %></td>
-      <td><%= lectura.actual %></td>
-      <td><%= lectura.consumo %></td>
-      <td><%= lectura.exceso %></td>
-      <td><%= link_to 'Ver', lectura, class: "btn btn-default" %></td>
-      <td><%= link_to 'Editar', edit_lectura_path(lectura), class: "btn btn-primary" %></td>
-      <td><%= link_to 'Eliminar', lectura, method: :delete, data: { confirm: 'Estas seguro?' }, class: "btn btn-danger" %></td>
+      <%= content_tag_for(:tr, @medidors) do |medidor| %>
+            <td><%= medidor.numero %></td>
+            <td><%= medidor.medicion %></td>
+            <% if medidor.estado_medidor == true %>
+              <td>ACTIVO</td>
+            <% else %>
+              <td>INACTIVO</td>
+            <% end %>
+            <td><%= link_to 'Ver', medidor, class: "btn btn-default" %></td>
+        <td><%= link_to 'Editar', edit_medidor_path(medidor), class: "btn btn-primary" %></td>
+        <td><%= link_to 'Eliminar', medidor, method: :delete, data: { confirm: 'Estas seguro?' }, class: "btn btn-danger" %></td>
       <% end %>
     </tbody>
   </table>
@@ -38,13 +38,9 @@
 
 <script>
 $(document).ready(function() {
-  $('#tablalectura').DataTable({
+  $('#tablamedidor').DataTable({
 
-    "order": [[ 0, "desc" ],[ 1, "asc" ]],
-
-    "fnRowCallback": function( nRow, aData, iDisplayIndex ) {
-    $('td:eq(1)', nRow).addClass('datatable-highlight');
-    },
+    "order": [ 0, "asc" ],
 
     "language": {
       "sProcessing":     "Procesando...",
